@@ -30,12 +30,22 @@ class Smarty_Internal_Resource_String extends Smarty_Resource {
     /**
      * Load template's source from $resource_name into current template object
      * 
+     * @note if source begins with "base64:" or "urlencode:", the source is decoded accordingly
      * @param Smarty_Template_Source $source source object
      * @return string template source
      * @throws SmartyException if source cannot be loaded
      */
     public function getContent(Smarty_Template_Source $source)
-    { 
+    {
+        // decode if specified
+        if (($pos = strpos($source->name, ':')) !== false) {
+            if (!strncmp($source->name, 'base64', 6)) {
+                return base64_decode(substr($source->name, 7));                
+            } elseif (!strncmp($source->name, 'urlencode', 9)) {
+                return urldecode(substr($source->name, 10));
+            }
+        }
+        
         return $source->name;
     } 
     
